--- a/tamagotchi-game/app.json
+++ b/tamagotchi-game/app.json
@@ -24,7 +24,10 @@
     "web": {
       "bundler": "metro",
       "output": "static",
-      "favicon": "./assets/images/favicon.png"
+      "favicon": "./assets/images/favicon.png",
+      "experiments": {
+        "baseUrl": "/tamagotchi-game-test"
+      }
     },
     "plugins": [
       "expo-router"
