--- a/tamagotchi-game/app.json
+++ b/tamagotchi-game/app.json
@@ -32,7 +32,7 @@
     ],
     "experiments": {
       "typedRoutes": true,
-      "baseUrl": "/tamagotchi-game-test/"
+      "baseUrl": "./"
     }
   }
 }
