--- a/tamagotchi-game/app.json
+++ b/tamagotchi-game/app.json
@@ -24,15 +24,14 @@
     "web": {
       "bundler": "metro",
       "output": "static",
-      "favicon": "./assets/images/favicon.png",
-
+      "favicon": "./assets/images/favicon.png"
     },
     "plugins": [
       "expo-router"
     ],
     "experiments": {
       "typedRoutes": true,
-      "baseUrl": "./"
+      "baseUrl": "/tamagotchi-game-test"
     }
   }
 }
